Bug 333566 - Quick filter in KMail 4.13 stops working with non-Latin characters (Cyrillic Russian Unicode) - search empty result

FIXED-IN: 4.13.1
BUG: 333566
We need to update database