src/pim/agent/akonotesindexer.cpp
@@ -28,7 +28,7 @@
 AkonotesIndexer::AkonotesIndexer(const QString& path)
     : AbstractIndexer(), m_termGen( 0 )
 {
-    m_db = new Xapian::WritableDatabase(path.toStdString(), Xapian::DB_CREATE_OR_OPEN);
+    m_db = new Xapian::WritableDatabase(path.toUtf8().constData(), Xapian::DB_CREATE_OR_OPEN);
 }
 
 AkonotesIndexer::~AkonotesIndexer()
