src/pim/lib/notequery.cpp
@@ -86,7 +86,8 @@ ResultIterator NoteQuery::exec()
         parser.set_database(db);
         parser.add_prefix("", "BO");
 
-        m_queries << parser.parse_query(d->note.toStdString(), Xapian::QueryParser::FLAG_PARTIAL);
+        const QByteArray baNote = d->note.toUtf8();
+        m_queries << parser.parse_query(baNote.constData(), Xapian::QueryParser::FLAG_PARTIAL);
     }
 
     if (!d->title.isEmpty()) {
@@ -95,7 +96,8 @@ ResultIterator NoteQuery::exec()
         parser.add_prefix("", "SU");
         parser.set_default_op(Xapian::Query::OP_AND);
 
-        m_queries << parser.parse_query(d->title.toStdString(), Xapian::QueryParser::FLAG_PARTIAL);
+        const QByteArray baTitle = d->title.toUtf8();
+        m_queries << parser.parse_query(baTitle.constData(), Xapian::QueryParser::FLAG_PARTIAL);
     }
 
     Xapian::Query query(Xapian::Query::OP_OR, m_queries.begin(), m_queries.end());
